<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <EditText
        android:id="@+id/name_text_input"
        android:layout_height="wrap_content"
        android:layout_width="match_parent"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginTop="16dp"
        android:hint="@string/name"
        android:inputType="textCapWords"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        style="@style/HeaderTextView"
        android:id="@+id/toppings_title"
        android:text="@string/toppings_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/name_text_input"
        app:layout_constraintTop_toBottomOf="@id/name_text_input" />

    <CheckBox
        android:id="@+id/toppings_item_checkbox_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/toppings_title"
        app:layout_constraintTop_toBottomOf="@id/toppings_title"
        android:onClick="updateUnitPrice"/>

    <TextView
        android:id="@+id/toppings_item_1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/topping_item_1"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/toppings_item_checkbox_1"
        app:layout_constraintTop_toTopOf="@id/toppings_item_checkbox_1"
        app:layout_constraintBottom_toBottomOf="@id/toppings_item_checkbox_1"/>

    <CheckBox
        android:id="@+id/toppings_item_checkbox_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/toppings_title"
        app:layout_constraintTop_toBottomOf="@id/toppings_item_checkbox_1"
        android:onClick="updateUnitPrice"/>

    <TextView
        android:id="@+id/toppings_item_2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:text="@string/topping_item_2"
        android:textSize="16sp"
        android:textColor="@android:color/black"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/toppings_item_checkbox_1"
        app:layout_constraintTop_toTopOf="@id/toppings_item_checkbox_2"
        app:layout_constraintBottom_toBottomOf="@id/toppings_item_checkbox_2"/>

    <TextView
        style="@style/HeaderTextView"
        android:id="@+id/quantity_title"
        android:text="@string/quantity_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/toppings_title"
        app:layout_constraintTop_toBottomOf="@id/toppings_item_checkbox_2" />

    <Button
        android:id="@+id/minus_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/minus"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toppings_title"
        app:layout_constraintTop_toBottomOf="@id/quantity_title"
        android:onClick="decrement"/>

    <TextView
        android:id="@+id/quantity_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:text="@string/quantity"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="@id/add_button"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/minus_button"
        app:layout_constraintTop_toTopOf="@id/add_button" />

    <Button
        android:id="@+id/add_button"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:onClick="increment"
        android:text="@string/add"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintStart_toEndOf="@+id/quantity_text_view"
        app:layout_constraintTop_toBottomOf="@id/quantity_title" />

    <TextView
        style="@style/HeaderTextView"
        android:id="@+id/price_title"
        android:text="@string/unit_price_title"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/toppings_title"
        app:layout_constraintTop_toBottomOf="@id/minus_button"/>

    <TextView
        android:id="@+id/unit_price_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:text="@string/unit_price"
        android:textColor="@android:color/black"
        android:textSize="16sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@id/toppings_title"
        app:layout_constraintTop_toBottomOf="@id/price_title" />

    <Button
        android:id="@+id/order_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/order_button"
        android:textColor="@android:color/white"
        android:backgroundTint="@color/colorPrimary"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toStartOf="@+id/toppings_title"
        app:layout_constraintTop_toBottomOf="@id/unit_price_text_view"
        android:onClick="submitOrder"/>

</android.support.constraint.ConstraintLayout>